Added both a user interface and processing for advanced metrics.